src/type_checker/tests/snapshots/type_checker@ident.input.snap
---
source: src/type_checker/mod.rs
assertion_line: 498
expression: ir
input_file: src/type_checker/tests/inputs/ident.input
---
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: foo
              args:
                - - x
                  - Int32
              ret_ty: Void
            body:
              - Expr:
                  Ident:
                    name: x
                    ty: Int32
- Err: "Unknown variable: y"

