src/type_checker/tests/snapshots/type_checker@ident.lt.snap
---
source: src/type_checker/mod.rs
assertion_line: 517
expression: asts
input_file: src/type_checker/tests/inputs/ident.lt
---
- - "// basic\nfn foo(x: int) { x }\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: foo
                args:
                  - - x
                    - Int32
                ret_ty: Void
              body:
                Block:
                  list:
                    - Expr:
                        Ident:
                          name: x
                          ty: Int32
                  ty: Int32
- - "\n// unknown var\nfn foo(x: int) { y }\n"
  - Err: "Symbol `y` not found in table"

