src/type_checker/tests/snapshots/type_checker@let.lt.snap
---
source: src/type_checker/mod.rs
assertion_line: 517
expression: asts
input_file: src/type_checker/tests/inputs/let.lt
---
- - "// basic\nfn foo() {\n    let x: int = 3\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: foo
                args: []
                ret_ty: Void
              body:
                Block:
                  list:
                    - Stmt:
                        Let:
                          name: x
                          antn: Int32
                          init:
                            Expr:
                              Lit:
                                value:
                                  Int32: 3
                                ty: Int32
                  ty: Void
- - "\n// basic; no init\nfn foo() {\n    let x: int\n}\n"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: foo
                args: []
                ret_ty: Void
              body:
                Block:
                  list:
                    - Stmt:
                        Let:
                          name: x
                          antn: Int32
                          init: ~
                  ty: Void
- - "\n// lit antn mismatch\nfn foo() {\n    let x: int = 3.0\n}\n"
  - Err: Literal is a float in an integer context
- - "\n// antn mismatch\nfn foo() {\n    let y: float = 1.0\n    let x: int = y\n}\n"
  - Err: "Types don't match in let statement. Annotated with `int32` but initial value is `float`"
- - "\n// lit range\nfn foo() {\n    let i: int = 2147483648\n}\n"
  - Err: Numeric literal out of range

