src/type_checker/tests/snapshots/type_checker@unop.input.snap
---
source: src/type_checker/mod.rs
assertion_line: 512
expression: ir
input_file: src/type_checker/tests/inputs/unop.input
---
- - "fn foo() { -3 }"
  - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: foo
                args: []
                ret_ty: Void
              body:
                - Expr:
                    UnOp:
                      sym: Sub
                      rhs:
                        Expr:
                          Lit:
                            value:
                              Int32: 3
                            ty: Int32
                      ty: Int32
- - "//fn foo() { let xy: int8 = 1 -xy }"
  - Ok:
      nodes: []

